--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@
   border-radius: 32px;
   padding: 20px;
 }
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
